aks-dev/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modernwms
  namespace: fleetbase
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  rules:
    - host: modernwms-dev.acovisa.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: modernwms-frontend
                port:
                  number: 80
    - host: modernwms-api-dev.acovisa.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: modernwms-api
                port:
                  number: 21011
  tls:
    - hosts:
        - modernwms-dev.acovisa.com.br
        - modernwms-api-dev.acovisa.com.br
      secretName: modernwms-tls
